fix contrast

--- a/css/general.css
+++ b/css/general.css
@@ -85,7 +85,7 @@ p {
 
 /* Footer */
 .footer {
-    background: #746666;
+    background: #aca2a2;
     max-height: 50px;
     width: auto;
     text-align: center;
