--- a/css/index.css
+++ b/css/index.css
@@ -87,7 +87,7 @@ h3 {
 
 /* Footer */
 .footer {
-    background: #746666;
+    background: #aca2a2;
     max-height: 50px;
     width: auto;
     text-align: center;
